# person_local_planner

person_local_planner/: CMakeLists.txt  blp_plugin.xml  package.xml
person_local_planner/cfg/: PersonPlanner.cfg
person_local_planner/include/person_local_planner/: person_planner.h  person_planner_ros.h  person_zone_cost_function.h
person_local_planner/src/: person_planner.cpp  person_planner_ros.cpp  person_zone_cost_function.cpp
